RPN-863 (#14)
Tests for Flow
