# openapi/protocol-union-model/src/main/kotlin/com/rarible/protocol/union/dto/serializer/flow/FlowItemIdDeserializer.kt
@@ -5,7 +5,7 @@ import com.fasterxml.jackson.databind.DeserializationContext
 import com.fasterxml.jackson.databind.deser.std.StdDeserializer
 import com.fasterxml.jackson.databind.node.ObjectNode
 import com.rarible.protocol.union.dto.BlockchainDto
-import com.rarible.protocol.union.dto.FlowAddress
+import com.rarible.protocol.union.dto.FlowContract
 import com.rarible.protocol.union.dto.FlowItemIdDto
 import com.rarible.protocol.union.dto.serializer.IdParser
 import java.math.BigInteger
@@ -19,7 +19,7 @@ object FlowItemIdDeserializer : StdDeserializer<FlowItemIdDto>(FlowItemIdDto::cl
         val tokenId = tree.get(FlowItemIdDto::tokenId.name)
         return FlowItemIdDto(
             value = IdParser.parse(value.textValue(), BlockchainDto.FLOW).second,
-            token = token.traverse(p.codec).readValueAs(FlowAddress::class.java),
+            token = token.traverse(p.codec).readValueAs(FlowContract::class.java),
             tokenId = tokenId.traverse(p.codec).readValueAs(BigInteger::class.java)
         )
     }
